Fixed Download CV button on mobile

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -105,7 +105,8 @@ a:hover {
 
   .button {
     position: relative;
-    bottom: 0.8rem;
+    margin-bottom: 1rem;
+    margin-top: -1rem;
   }
 }
 
